--- a/gtbankRecreateTask/gtb_loginRecreate_task.css
+++ b/gtbankRecreateTask/gtb_loginRecreate_task.css
@@ -144,7 +144,7 @@ input[type=checkbox] {
     border-radius: 5px;
 }
     
-.childClr {
+.childClr,.childCLR {
     border-radius: 5px;
     background-color: #D94F00;
     color: white;
